k8s/base/keycloak/deployment-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-operator
  namespace: markenx
  labels:
    app: keycloak-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-operator
  template:
    metadata:
      labels:
        app: keycloak-operator
    spec:
      serviceAccountName: keycloak-operator
      containers:
        - name: operator
          image: quay.io/keycloak/keycloak-operator:26.4.7
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
