k8s/base/keycloak/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: markenx
spec:
  selector:
    app: keycloak
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: https
      port: 8443
      targetPort: 8443
